--- a/apache/Dockerfile.twig
+++ b/apache/Dockerfile.twig
@@ -27,7 +27,7 @@ RUN set -x && \
       shadow \
       git \
       gnu-libiconv \
-      icu-data-full \
+      {% if phpVersionNumeric >= 74 %}icu-data-full \{% endif %}
       socat && \
     install-php-extensions bcmath gd intl mysqli pdo_mysql pdo_pgsql sockets bz2 gmp soap zip gmp redis imagick calendar {% if phpVersionNumeric >= 74 %} ffi {% endif %} {% if production %} opcache {% endif %} {% if xdebug %} xdebug{% if phpVersionNumeric >= 71 and xdebug == 2 %}-2.9.8{% endif %}{% endif %} && \
     ln -s /usr/local/bin/php /usr/bin/php && \
